Fix previous commit